

- New Conspiracy cards -
We have added a branch to our SVN for the new cards that are currently being scripted. These cards are not yet available in this build of forge. Please be patient and they will soon become available.


---------
New Cards
---------

Guardian Beast
Illicit Auction
Mages' Contest
Mana Web
Pain's Reward
Wall of Shadows


--------------------
New Vanguard Avatars
--------------------

Heartwood Storyteller


---------------------------
New Conspiracy branch Cards
---------------------------

Brago's Representative
Brago, King Eternal
Council Guardian
Dack Fayden
Drakestown Forgotten
Extract from Darkness
Grenzo, Dungeon Warden
Magister of Worth
Marchesa's Infiltrator
Marchesa, the Black Rose
Muzzio, Visionary Architect
Plea for Power
Reign of the Pit
Rousing of Souls
Scourge of the Throne
Selvala's Charge
Selvala, Explorer Returned
Split Decision
Treasonous Ogre
Tyrant's Choice


------------
Known Issues
------------

- The Mac OS application version -
We can now package Forge as a Mac OS application. You can double click the Forge.app icon to launch the forge application on your Apple computer running Mac OS. This application will automatically increase the java heap space memory for you as it launches. This version does not require the forge.command file and it does not need to start the Terminal application as part of the start up process.

The Mac OS X app version apparently requires the Mavericks OS and is not compatible with earlier OS X versions. People with earlier OS X versions should use the Windows and Linux version and launch forge on their Mac by double clicking on the included "forge.command" file.

- Commander 2013 cards -